add model for logon
Former-commit-id: aa2c40ff8a5b303e57b679d16ebd8dd1f28d6037 [formerly f3881e0ff08f11dbefda5ef0c34a42565010bda1]
Former-commit-id: b9a0316c6365a509aefda02ce084786ecaa00d4d

--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -35,5 +35,13 @@
              DOMContentLoaded="wv_DOMContentLoaded"
              NavigationFailed="wv_NavigationFailed"
              ScriptNotify="wv_ScriptNotify" />
+    <Border x:Name="bdProgress"
+            Background="{ThemeResource SystemControlBackgroundAltMediumHighBrush}"
+            Visibility="Collapsed">
+      <ProgressRing x:Name="pr"
+                    Width="40"
+                    Height="40"
+                    IsActive="True" />
+    </Border>
   </Grid>
 </controls:MyContentDialog>
