toplist (need loaclization)
Former-commit-id: d965fa9f86417358abe26694bb37d6fe25cb1454 [formerly f24be2e831eeae5a6081adb5e08a039c405613e2]
Former-commit-id: c2e34db017e15c065941a1b6f37564eb3a7874fc

--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -236,6 +236,17 @@
                             Height="32" />
                 </controls:SplitViewTab.Icon>
               </controls:SplitViewTab>
+              <controls:SplitViewTab x:Uid="Views/RootControl/ToplistSplitViewTab"
+                                     x:Name="svt_Toplist"
+                                     Content="Toplist"
+                                     Click="svt_Click"
+                                     AccessKey="T">
+                <controls:SplitViewTab.Icon>
+                  <PathIcon Data="M9,10 L9,19 L11,19 L11,21.2891 L13.28906,19 L23,19 L23,10 z M8,9 L24,9 L24,20 L13.71094,20 L10,23.7109 L10,20 L8,20 z M13,14 h2 l1,-2.2 l1,2.2 h2 l-1.5,1.4 l0.4,2.2 l-1.9,-1 l-1.9,1 l0.4,-2.2z"
+                            Width="32"
+                            Height="32" />
+                </controls:SplitViewTab.Icon>
+              </controls:SplitViewTab>
               <controls:SplitViewTab x:Uid="Views/RootControl/SavedSplitViewTab"
                                      x:Name="svt_Saved"
                                      Content="Saved galleries"
