--- a/ExViewer/Views/RenameGalleryDialog.xaml
+++ b/ExViewer/Views/RenameGalleryDialog.xaml
@@ -2,12 +2,14 @@
                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                           xmlns:local="using:ExViewer.Views"
+                          xmlns:viewer="using:ExViewer"
                           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                           xmlns:controls="using:ExViewer.Controls"
                           xmlns:client="using:ExClient"
                           xmlns:services="using:ExClient.Services"
                           mc:Ignorable="d"
+                          x:Uid="Views/RenameGalleryDialog/ContentDialog"
                           Title="RENAME GALLERY"
                           PrimaryButtonText="Submit"
                           CloseButtonText="Close"
@@ -20,11 +22,15 @@
                   x:DataType="services:RenameRecord">
       <Grid Margin="0,4">
         <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="32" />
+          <ColumnDefinition Width="40"
+                            x:Uid="Views/RenameGalleryDialog/PowerColumnDefinition" />
           <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <TextBlock Text="{x:Bind Power, Mode=OneWay}" />
-        <TextBlock Grid.Column="1"
+        <TextBlock Text="{x:Bind viewer:Strings.Resources.Views.RenameGalleryDialog.PowerTemplate(Power), Mode=OneWay}"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center" />
+        <TextBlock Margin="8,0,0,0"
+                   Grid.Column="1"
                    Style="{ThemeResource BodyTextBlockStyle}"
                    Text="{x:Bind Title}" />
       </Grid>
@@ -42,57 +48,69 @@
       <Setter Property="Margin"
               Value="0,4" />
     </Style>
+    <Style x:Key="UploaderTitleTextBlockStyle"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource BodyTextBlockStyle}">
+      <Setter Property="Margin"
+              Value="0,4" />
+      <Setter Property="IsTextSelectionEnabled"
+              Value="True" />
+    </Style>
   </controls:MyContentDialog.Resources>
   <Grid Margin="0,-4">
     <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="Auto" />
       <RowDefinition Height="*" />
       <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
-    <TextBlock Text="Roman Script"
-               Style="{ThemeResource RenameTypeTextBlockStyle}" />
-    <ListView x:Name="lvRoman"
-              Grid.Row="1"
-              SelectionChanged="lv_SelectionChanged"
-              ItemsSource="{x:Bind info.RomanRecords}"
-              ItemTemplate="{StaticResource RecordDataTemplate}">
-      <ListView.Header>
-        <TextBlock Text="{x:Bind info.OriginalRomanTitle, FallbackValue=''}"
-                   Style="{ThemeResource BodyTextBlockStyle}" />
-      </ListView.Header>
-      <ListView.Footer>
-        <TextBox x:Name="tbRoman"
-                 Style="{StaticResource RenameTextBoxStyle}"
-                 PlaceholderText="Input Roman title"
-                 TextChanged="tb_TextChanged"
-                 Text="{x:Bind info.VotedRoman, TargetNullValue='', Mode=OneWay}" />
-      </ListView.Footer>
-    </ListView>
-    <TextBlock Text="Japanese Script"
-               Grid.Row="2"
-               Style="{ThemeResource RenameTypeTextBlockStyle}" />
-    <ListView x:Name="lvJapanese"
-              Grid.Row="3"
-              SelectionChanged="lv_SelectionChanged"
-              ItemsSource="{x:Bind info.JapaneseRecords}"
-              ItemTemplate="{StaticResource RecordDataTemplate}">
-      <ListView.Header>
-        <TextBlock Text="{x:Bind info.OriginalJapaneseTitle, FallbackValue=''}"
-                   Style="{ThemeResource BodyTextBlockStyle}" />
-      </ListView.Header>
-      <ListView.Footer>
-        <TextBox x:Name="tbJapanese"
-                 Style="{StaticResource RenameTextBoxStyle}"
-                 PlaceholderText="Input Japanese title"
-                 TextChanged="tb_TextChanged"
-                 Text="{x:Bind info.VotedJapanese, TargetNullValue='', Mode=OneWay}" />
-      </ListView.Footer>
-    </ListView>
+    <ScrollViewer VerticalScrollMode="Auto"
+                  VerticalScrollBarVisibility="Auto">
+      <StackPanel>
+        <TextBlock Text="Roman script"
+                   x:Uid="Views/RenameGalleryDialog/RomanTitleTextBlock"
+                   Style="{ThemeResource RenameTypeTextBlockStyle}" />
+        <ListView x:Name="lvRoman"
+                  SelectionChanged="lv_SelectionChanged"
+                  ItemsSource="{x:Bind info.RomanRecords}"
+                  ItemTemplate="{StaticResource RecordDataTemplate}">
+          <ListView.Header>
+            <TextBlock Text="{x:Bind info.OriginalRomanTitle, FallbackValue=''}"
+                       Style="{ThemeResource UploaderTitleTextBlockStyle}" />
+          </ListView.Header>
+          <ListView.Footer>
+            <TextBox x:Name="tbRoman"
+                     x:Uid="Views/RenameGalleryDialog/RomanTextBox"
+                     Style="{StaticResource RenameTextBoxStyle}"
+                     PlaceholderText="Input Roman title"
+                     TextChanged="tb_TextChanged"
+                     Text="{x:Bind info.VotedRoman, TargetNullValue='', Mode=OneWay}" />
+          </ListView.Footer>
+        </ListView>
+        <TextBlock Text="Japanese script"
+                   x:Uid="Views/RenameGalleryDialog/JapaneseTitleTextBlock"
+                   Style="{ThemeResource RenameTypeTextBlockStyle}" />
+        <ListView x:Name="lvJapanese"
+                  SelectionChanged="lv_SelectionChanged"
+                  ItemsSource="{x:Bind info.JapaneseRecords}"
+                  ItemTemplate="{StaticResource RecordDataTemplate}">
+          <ListView.Header>
+            <TextBlock Text="{x:Bind info.OriginalJapaneseTitle, FallbackValue=''}"
+                       Style="{ThemeResource UploaderTitleTextBlockStyle}" />
+          </ListView.Header>
+          <ListView.Footer>
+            <TextBox x:Name="tbJapanese"
+                     x:Uid="Views/RenameGalleryDialog/JapaneseTextBox"
+                     Style="{StaticResource RenameTextBoxStyle}"
+                     PlaceholderText="Input Japanese title"
+                     TextChanged="tb_TextChanged"
+                     Text="{x:Bind info.VotedJapanese, TargetNullValue='', Mode=OneWay}" />
+          </ListView.Footer>
+        </ListView>
+
+      </StackPanel>
+    </ScrollViewer>
     <Grid Margin="0,4"
           MinHeight="4"
-          Grid.Row="4">
+          Grid.Row="1">
       <TextBlock x:Name="tbInfo"
                  HorizontalAlignment="Stretch"
                  TextWrapping="WrapWholeWords"
