Use streamed file
Former-commit-id: e5ee16e369c111d67c8779ebdf164cc927d6c791 [formerly 959a921578436ad53a7723371469be00669e90d4]
Former-commit-id: 637f08d09abe60e1fa8ca20300c5f77900e53827

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -101,7 +101,7 @@
                    Foreground="Red"
                    Style="{StaticResource TorrentNameTextBlockStyle}"
                    Text="Expunged"
-                   Visibility="{x:Bind TorrentUri, Converter={StaticResource NullToVisibleConverter}}" />
+                   Visibility="{x:Bind IsExpunged}" />
         <Button x:Uid="Views/GalleryPage/TorrentDownloadButton"
                 Grid.RowSpan="2"
                 Grid.Column="2"
