--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -4,6 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="using:ExViewer.Controls"
+             xmlns:viewer="using:ExViewer"
              mc:Ignorable="d"
              Loading="UserControl_Loading"
              Unloaded="UserControl_Unloaded"
@@ -94,6 +95,9 @@
     <TextBlock x:Name="tb_AppVersion"
                Text="AppVersion"
                Style="{StaticResource AboutControlBaseTextBlockStyle}" />
+    <HyperlinkButton x:Name="hb_GithubVersion"
+                     Content="{x:Bind viewer:Strings.Resources.Controls.AboutControl.GithubVersionFormat(viewer:Github.BRANCH, viewer:Github.COMMIT)}"
+                     Style="{StaticResource AboutControlHyperLinkButtonStyle}" />
     <TextBlock x:Name="tb_AppDescription"
                Style="{StaticResource AboutControlBodyTextBlockStyle}"
                Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor sagittis laoreet. Proin posuere dapibus eros, ut condimentum arcu pharetra vel. Cras hendrerit ipsum sed odio pellentesque, sed scelerisque dui finibus. Fusce volutpat, odio eu volutpat mattis, enim tortor aliquam quam, sed aliquam arcu arcu sit amet velit." />
@@ -288,7 +292,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                      x:Uid="Controls/AboutControl/SendLogHyperlinkButton"
                      xmlns:ex="using:ExViewer"
                      Content="Send crash log"
-                     Click="{x:Bind ex:Telemetry.SendLog}"/>
+                     Click="{x:Bind ex:Telemetry.SendLog}" />
     <HyperlinkButton Style="{StaticResource AboutControlHyperLinkButtonStyle}"
                      x:Uid="Controls/AboutControl/HelpTranslateTagsHyperlinkButton"
                      Content="Help translate tags into Chinese"
