Add github info to log file
Former-commit-id: 4e3d57fc3d23da36637185c09f6c55afe2d25ed8 [formerly e82fce15b00f8c8d8efa2855cb373b4a0877fa1b]
Former-commit-id: c33ed8772a69891f94f9e9acdfaddb7eb272ed92

--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -96,7 +96,8 @@
                Text="AppVersion"
                Style="{StaticResource AboutControlBaseTextBlockStyle}" />
     <HyperlinkButton x:Name="hb_GithubVersion"
-                     Padding="0">
+                     Padding="0"
+                     ToolTipService.ToolTip="{x:Bind viewer:Github.COMMIT}">
       <TextBlock x:Name="tb_GithubVersion"
                  Style="{StaticResource AboutControlBaseTextBlockStyle}" />
     </HyperlinkButton>
