VM for expungereason
Former-commit-id: 12c4060379f64d203f027debc3716e6b1abf60f9 [formerly d51e28eede2cfea136eeec7012529bc6d878e962]
Former-commit-id: 8d4375e7472ce2d4ec244f8875f2f80eca828f94

--- a/ExViewer/Views/ExpungeGalleryDialog.xaml
+++ b/ExViewer/Views/ExpungeGalleryDialog.xaml
@@ -80,12 +80,14 @@
                 SelectionChanged="lvReason_SelectionChanged"
                 ItemContainerStyle="{ThemeResource ListViewItemStyle}">
         <ListView.ItemTemplate>
-          <DataTemplate x:DataType="services:ExpungeReason">
-            <TextBlock Text="{x:Bind}"
-                       ToolTipService.ToolTip="{x:Bind}"
-                       Margin="8,4"
-                       HorizontalAlignment="Center"
-                       TextTrimming="CharacterEllipsis"/>
+          <DataTemplate x:DataType="local:ExpungeReasonVM">
+            <Border Background="Transparent"
+                    ToolTipService.ToolTip="{x:Bind Description}"
+                    Padding="8,4">
+              <TextBlock Text="{x:Bind Name}"
+                         HorizontalAlignment="Center"
+                         TextTrimming="CharacterEllipsis" />
+            </Border>
           </DataTemplate>
         </ListView.ItemTemplate>
         <ListView.ItemsPanel>
