--- a/ExViewer/Views/RenameGalleryDialog.xaml
+++ b/ExViewer/Views/RenameGalleryDialog.xaml
@@ -8,6 +8,7 @@
                           xmlns:controls="using:ExViewer.Controls"
                           xmlns:client="using:ExClient"
                           xmlns:services="using:ExClient.Services"
+                          xmlns:sys="using:System"
                           mc:Ignorable="d"
                           x:Uid="Views/RenameGalleryDialog/ContentDialog"
                           Title="RENAME GALLERY"
@@ -19,24 +20,37 @@
                           Loading="MyContentDialog_Loading"
                           Unloaded="MyContentDialog_Unloaded">
   <controls:MyContentDialog.Resources>
+    <DataTemplate x:Key="UploaderTitleTemplate"
+                  x:DataType="x:String">
+      <TextBlock Text="{x:Bind}"
+                 Margin="8,4"
+                 IsTextSelectionEnabled="True"
+                 Style="{ThemeResource BaseTextBlockStyle}" />
+    </DataTemplate>
     <DataTemplate x:Key="RecordDataTemplate"
                   x:DataType="services:RenameRecord">
-      <Grid Margin="0,4">
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="40"
-                            x:Uid="Views/RenameGalleryDialog/PowerColumnDefinition" />
-          <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="{x:Bind viewer:Strings.Resources.Views.RenameGalleryDialog.PowerTemplate(Power), Mode=OneWay}"
-                   Style="{ThemeResource BaseTextBlockStyle}"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Center" />
-        <TextBlock Margin="8,0,0,0"
-                   Grid.Column="1"
-                   Style="{ThemeResource BodyTextBlockStyle}"
+      <Grid Background="Transparent"
+            Padding="4"
+            ToolTipService.ToolTip="{x:Bind viewer:Strings.Resources.Views.RenameGalleryDialog.PowerTemplate(Power), Mode=OneWay}">
+        <ProgressBar Value="{x:Bind Power, Mode=OneWay}"
+                     VerticalAlignment="Stretch"
+                     Background="{x:Null}"
+                     Opacity="0.4"
+                     Maximum="100" />
+        <TextBlock Style="{ThemeResource BodyTextBlockStyle}"
+                   Margin="8,4"
                    Text="{x:Bind Title}" />
       </Grid>
     </DataTemplate>
+    <Style x:Key="RecordListViewStyle"
+           TargetType="ListView">
+      <Setter Property="ItemTemplate"
+              Value="{StaticResource RecordDataTemplate}" />
+      <Setter Property="ItemContainerStyle"
+              Value="{ThemeResource ListViewItemStyle}" />
+      <Setter Property="HeaderTemplate"
+              Value="{StaticResource UploaderTitleTemplate}" />
+    </Style>
     <Style x:Key="RenameTextBoxStyle"
            TargetType="TextBox">
       <Setter Property="TextWrapping"
@@ -49,14 +63,6 @@
            BasedOn="{StaticResource BodyTextBlockStyle}">
       <Setter Property="Margin"
               Value="0,8,0,0" />
-    </Style>
-    <Style x:Key="UploaderTitleTextBlockStyle"
-           TargetType="TextBlock"
-           BasedOn="{StaticResource BodyTextBlockStyle}">
-      <Setter Property="Margin"
-              Value="8,4" />
-      <Setter Property="IsTextSelectionEnabled"
-              Value="True" />
     </Style>
   </controls:MyContentDialog.Resources>
   <Grid Margin="0,-4">
@@ -72,13 +78,9 @@
                    Style="{ThemeResource RenameTypeTextBlockStyle}" />
         <ListView x:Name="lvRoman"
                   SelectionChanged="lv_SelectionChanged"
+                  Style="{ThemeResource RecordListViewStyle}"
                   ItemsSource="{x:Bind info.RomanRecords}"
-                  ItemTemplate="{StaticResource RecordDataTemplate}">
-          <ListView.Header>
-            <TextBlock x:Name="tbORoman"
-                       Text="{x:Bind info.OriginalRomanTitle, FallbackValue=''}"
-                       Style="{ThemeResource UploaderTitleTextBlockStyle}" />
-          </ListView.Header>
+                  Header="{x:Bind info.OriginalRomanTitle, FallbackValue=''}">
           <ListView.Footer>
             <TextBox x:Name="tbRoman"
                      x:Uid="Views/RenameGalleryDialog/RomanTextBox"
@@ -93,13 +95,9 @@
                    Style="{ThemeResource RenameTypeTextBlockStyle}" />
         <ListView x:Name="lvJapanese"
                   SelectionChanged="lv_SelectionChanged"
+                  Style="{ThemeResource RecordListViewStyle}"
                   ItemsSource="{x:Bind info.JapaneseRecords}"
-                  ItemTemplate="{StaticResource RecordDataTemplate}">
-          <ListView.Header>
-            <TextBlock x:Name="tbOJapanese"
-                       Text="{x:Bind info.OriginalJapaneseTitle, FallbackValue=''}"
-                       Style="{ThemeResource UploaderTitleTextBlockStyle}" />
-          </ListView.Header>
+                  Header="{x:Bind info.OriginalJapaneseTitle, FallbackValue=''}">
           <ListView.Footer>
             <TextBox x:Name="tbJapanese"
                      x:Uid="Views/RenameGalleryDialog/JapaneseTextBox"
