use htmltextblock for expluge reasons
Former-commit-id: 190bd8b7fd22c5479313a6006521f429f35c04b2 [formerly b675c08ca922bee3ef858c1d6181b605edd12073]
Former-commit-id: 34a288e01915d571b90a431407f28cd600a11e5c

--- a/ExViewer/Controls/ExpungeRecordPresenter.xaml
+++ b/ExViewer/Controls/ExpungeRecordPresenter.xaml
@@ -74,14 +74,12 @@
     <TextBlock x:Name="Reason"
                Style="{StaticResource HeaderTextBlockStyle}"
                Text="{x:Bind services:ExpungeReasonExtension.ToFriendlyNameString(Record.Reason), Mode=OneWay}" />
-    <TextBlock x:Name="Explanation"
-               Margin="8"
-               RelativePanel.AlignLeftWithPanel="True"
-               RelativePanel.AlignRightWithPanel="True"
-               RelativePanel.AlignBottomWithPanel="True"
-               RelativePanel.Below="Header"
-               IsTextSelectionEnabled="True"
-               Style="{ThemeResource BodyTextBlockStyle}"
-               Text="{x:Bind Record.Explanation, TargetNullValue='', Mode=OneWay}" />
+    <local:HtmlTextBlock x:Name="Explanation"
+                         Margin="8"
+                         RelativePanel.AlignLeftWithPanel="True"
+                         RelativePanel.AlignBottomWithPanel="True"
+                         RelativePanel.Below="Header"
+                         DetectLink="True"
+                         HtmlContent="{x:Bind local:ExpungeRecordPresenter.warpString(Record.Explanation), Mode=OneWay}" />
   </RelativePanel>
 </UserControl>
