--- a/ExViewer/Views/RenameGalleryDialog.xaml
+++ b/ExViewer/Views/RenameGalleryDialog.xaml
@@ -29,10 +29,13 @@
     </DataTemplate>
     <DataTemplate x:Key="RecordDataTemplate"
                   x:DataType="services:RenameRecord">
-      <Grid Background="Transparent"
-            Padding="4"
-            ToolTipService.ToolTip="{x:Bind viewer:Strings.Resources.Views.RenameGalleryDialog.PowerTemplate(Power), Mode=OneWay}">
-        <ProgressBar Value="{x:Bind Power, Mode=OneWay}"
+      <Grid Padding="4">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <ProgressBar Grid.ColumnSpan="999"
+                     Value="{x:Bind Power, Mode=OneWay}"
                      VerticalAlignment="Stretch"
                      Background="{x:Null}"
                      Opacity="0.4"
@@ -40,6 +43,11 @@
         <TextBlock Style="{ThemeResource BodyTextBlockStyle}"
                    Margin="8,4"
                    Text="{x:Bind Title}" />
+        <TextBlock Grid.Column="1"
+                   VerticalAlignment="Center"
+                   Style="{ThemeResource BaseTextBlockStyle}"
+                   Margin="8,4"
+                   Text="{x:Bind viewer:Strings.Resources.Views.RenameGalleryDialog.PowerTemplate(Power), Mode=OneWay}" />
       </Grid>
     </DataTemplate>
     <Style x:Key="RecordListViewStyle"
